# VideoMAEOptimized

./: .gitignore  CMakeLists.txt  FINETUNE.md  README.md  convert_model.py  convert_to_onnx.py  convert_to_tfjs.py  datasets.py  engine_for_finetuning.py  kinetics.py  modeling_finetune.py  optim_factory.py  preprocess_dataset.py  run_class_finetuning.py  simple_inference.py  ssv2.py  utils.py  videomae_wrapper.cpp  wasm_build.py
js/: app.js  index.html  videomae.data  wasm_interface.js
model/: config.json  preprocessor_config.json
